; ModuleID = '/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_if_llatbl.c_lltable_glbl_init.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/bsd/net/extr_if_llatbl.c_lltable_glbl_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@lltable_rwlock_grp_attr = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [15 x i8] c"lltable_rwlock\00", align 1
@lltable_rwlock_grp = common dso_local global i8* null, align 8
@lltable_rwlock_attr = common dso_local global i8* null, align 8
@lltable_rwlock = common dso_local global i32 0, align 4
@lle_lock_grp_attr = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [10 x i8] c"lle locks\00", align 1
@lle_lock_grp = common dso_local global i8* null, align 8
@lle_lock_attr = common dso_local global i8* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @lltable_glbl_init() #0 {
  %1 = call i32 (...) @lck_grp_attr_alloc_init()
  store i32 %1, i32* @lltable_rwlock_grp_attr, align 4
  %2 = load i32, i32* @lltable_rwlock_grp_attr, align 4
  %3 = call i8* @lck_grp_alloc_init(i8* getelementptr inbounds ([15 x i8], [15 x i8]* @.str, i64 0, i64 0), i32 %2)
  store i8* %3, i8** @lltable_rwlock_grp, align 8
  %4 = call i8* (...) @lck_attr_alloc_init()
  store i8* %4, i8** @lltable_rwlock_attr, align 8
  %5 = load i32, i32* @lltable_rwlock, align 4
  %6 = load i8*, i8** @lltable_rwlock_grp, align 8
  %7 = load i8*, i8** @lltable_rwlock_attr, align 8
  %8 = call i32 @lck_rw_init(i32 %5, i8* %6, i8* %7)
  %9 = call i32 (...) @lck_grp_attr_alloc_init()
  store i32 %9, i32* @lle_lock_grp_attr, align 4
  %10 = load i32, i32* @lle_lock_grp_attr, align 4
  %11 = call i8* @lck_grp_alloc_init(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.1, i64 0, i64 0), i32 %10)
  store i8* %11, i8** @lle_lock_grp, align 8
  %12 = call i8* (...) @lck_attr_alloc_init()
  store i8* %12, i8** @lle_lock_attr, align 8
  ret void
}

declare dso_local i32 @lck_grp_attr_alloc_init(...) #1

declare dso_local i8* @lck_grp_alloc_init(i8*, i32) #1

declare dso_local i8* @lck_attr_alloc_init(...) #1

declare dso_local i32 @lck_rw_init(i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
